# citrineos.github.io

./: .gitignore  404.html  Dockerfile  Gemfile  README.md  _config.yml  docker-compose.yml  framework.md  index.html  index.md  latest  mkdocs.yml  pre-setup.md  pyproject.toml  quickstart.md  references.md  roadmap.md  sitemap.xml  systemconfiguration.md  versions.json
.github/workflow/: deploy-mkdocs.yml
.github/workflows/: deploy-mkdocs.yml  deploy-version-mkdocs.yml  jekyll.yml  links.yml  links_cron.yml
0.0.x/: 404.html  index.html  sitemap.xml
0.0.x/references/: index.html
0.0.x/roadmap/: index.html
0.1.x/: 404.html  index.html  sitemap.xml
0.1.x/references/: index.html
0.1.x/roadmap/: index.html
1.4.x/: 404.html  index.html  sitemap.xml
1.4.x/references/: index.html
1.4.x/roadmap/: index.html
1.4.x/search/: search_index.json
1.5.x/: 404.html  index.html  sitemap.xml
1.5.x/references/: index.html
1.5.x/roadmap/: index.html
1.5.x/search/: search_index.json
_data/: navigation.yml  side-nav-bar.yaml  top-nav-bar.yml
_includes/: footer.html  header.html  hero.html  side-nav-bar.html  top-nav-bar.html
_layouts/: default.html  doc.html
_sass/: main.scss  theme.scss
_sass/components/: _footer.scss  _header.scss  _hero.scss  (+2 more)
docs/: api.md  architecture.md  getting-started.md  index.md  making-changes.md  prerequisites.md  references.md  roadmap.md  running-ocpi.md
main/: 404.html  index.html  sitemap.xml
overrides/: 404.html
references/: index.html
roadmap/: index.html
v1.8.X/: 404.html  index.html  sitemap.xml
(+101 files in other folders)
